Create Blog And Portfolio

--- a/Resume/Views/Shared/_Layout.cshtml
+++ b/Resume/Views/Shared/_Layout.cshtml
@@ -68,10 +68,10 @@
 
         <div class="nav-wrap">
             <ul class="nav">
-                <li class="nav__item"><a asp-controller="Home" asp-action="Privacy">About</a></li>
+                <li class="nav__item"><a asp-controller="Home" asp-action="About">About</a></li>
                 <li class="nav__item"><a class="active" asp-controller="Home" asp-action="Index">Resume</a></li>
-                <li class="nav__item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="nav__item"><a href="blog.html">Blog</a></li>
+                <li class="nav__item"><a asp-controller="Home" asp-action="Portfolio">Portfolio</a></li>
+                <li class="nav__item"><a asp-controller="Home" asp-action="Blog">Blog</a></li>
                 <li class="nav__item"><a asp-controller="Home" asp-action="Contact">Contact</a></li>
             </ul>
         </div>
